Zero VM is broken due to UseRTMForStackLocks was not declared after JDK-8276901

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 18
    • Affects Version/s: 18
    • Component/s: hotspot
    • b27



        ```
        /home/jvm/jdk/src/hotspot/share/runtime/arguments.cpp: In static member function 'static bool Arguments::check_vm_args_consistency()':
        /home/jvm/jdk/src/hotspot/share/runtime/arguments.cpp:2030:27: error: 'UseRTMForStackLocks' was not declared in this scope
           if (UseHeavyMonitors && UseRTMForStackLocks) {
                                   ^~~~~~~~~~~~~~~~~~~
        ```

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: