8278379: Zero VM is broken due to UseRTMForStackLocks was not declared after JDK-8276901

Reviewed-by: dholmes, shade